First-commit: Added Hello world related files1, main.ts, app.component.ts and changed the index.html to import it

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         map: { 'app': './app' }
       });
 
-      System.import('app/environment_main')
+      System.import('app/hello_world_main')
             .then(null, console.error.bind(console));
-
+            
     </script>
 
   </head>
